Multiplayer sort of works
i'm cool

--- a/Beta.cbp
+++ b/Beta.cbp
@@ -24,6 +24,8 @@
 					<Add directory="include/Physics" />
 					<Add directory="include/Network" />
 					<Add directory="include/Universe/Modules" />
+					<Add directory="include/Universe/Chunk" />
+					<Add directory="include/Universe/Utility" />
 				</Compiler>
 				<Linker>
 					<Add library="lib\box2d_debug\libBox2D.dll.a" />
@@ -53,6 +55,8 @@
 					<Add directory="include/Physics" />
 					<Add directory="include/Network" />
 					<Add directory="include/Universe/Modules" />
+					<Add directory="include/Universe/Chunk" />
+					<Add directory="include/Universe/Utility" />
 				</Compiler>
 				<Linker>
 					<Add library="lib\box2d_release\libBox2D.dll.a" />
@@ -96,6 +100,7 @@
 		<Unit filename="include/Control/Input.hpp" />
 		<Unit filename="include/Control/Intelligence.hpp" />
 		<Unit filename="include/Control/Player.hpp" />
+		<Unit filename="include/Control/SlaveLocator.hpp" />
 		<Unit filename="include/Game/Game.hpp" />
 		<Unit filename="include/Graphics/BatchLayers.hpp" />
 		<Unit filename="include/Graphics/GraphicsComponent.hpp" />
@@ -115,6 +120,7 @@
 		<Unit filename="include/IO/IOComponent.hpp" />
 		<Unit filename="include/IO/IOManager.hpp" />
 		<Unit filename="include/IO/Message.hpp" />
+		<Unit filename="include/Network/NetworkBoss.hpp" />
 		<Unit filename="include/Network/NetworkComponent.hpp" />
 		<Unit filename="include/Overlay/Button.hpp" />
 		<Unit filename="include/Overlay/EditBox.hpp" />
@@ -124,10 +130,14 @@
 		<Unit filename="include/Overlay/WidgetBase.hpp" />
 		<Unit filename="include/Physics/BodyComponent.hpp" />
 		<Unit filename="include/Physics/FixtureComponent.hpp" />
-		<Unit filename="include/Universe/GameObject.hpp" />
-		<Unit filename="include/Universe/GameObjectFactory.hpp" />
+		<Unit filename="include/Universe/Chunk/Chunk.hpp" />
 		<Unit filename="include/Universe/Modules/Module.hpp" />
+		<Unit filename="include/Universe/Modules/ShipModule.hpp" />
 		<Unit filename="include/Universe/Universe.hpp" />
+		<Unit filename="include/Universe/Utility/DebugDraw.hpp" />
+		<Unit filename="include/Universe/Utility/Factory.hpp" />
+		<Unit filename="include/Universe/Utility/GameObject.hpp" />
+		<Unit filename="include/Universe/Utility/UniversalContactListener.hpp" />
 		<Unit filename="main.cpp" />
 		<Unit filename="src/Basic/Link.cpp" />
 		<Unit filename="src/Basic/Timer.cpp" />
@@ -135,6 +145,7 @@
 		<Unit filename="src/Control/Input.cpp" />
 		<Unit filename="src/Control/Intelligence.cpp" />
 		<Unit filename="src/Control/Player.cpp" />
+		<Unit filename="src/Control/SlaveLocator.cpp" />
 		<Unit filename="src/Game/Game.cpp" />
 		<Unit filename="src/Graphics/BatchLayers.cpp" />
 		<Unit filename="src/Graphics/GraphicsComponent.cpp" />
@@ -147,6 +158,7 @@
 		<Unit filename="src/IO/IOComponent.cpp" />
 		<Unit filename="src/IO/IOManager.cpp" />
 		<Unit filename="src/IO/Message.cpp" />
+		<Unit filename="src/Network/NetworkBoss.cpp" />
 		<Unit filename="src/Network/NetworkComponent.cpp" />
 		<Unit filename="src/Overlay/Button.cpp" />
 		<Unit filename="src/Overlay/EditBox.cpp" />
@@ -156,13 +168,13 @@
 		<Unit filename="src/Overlay/WidgetBase.cpp" />
 		<Unit filename="src/Physics/BodyComponent.cpp" />
 		<Unit filename="src/Physics/FixtureComponent.cpp" />
-		<Unit filename="src/Universe/GameObject.cpp" />
-		<Unit filename="src/Universe/GameObjectFactory.cpp" />
+		<Unit filename="src/Universe/Chunk/Chunk.cpp" />
 		<Unit filename="src/Universe/Modules/Module.cpp" />
+		<Unit filename="src/Universe/Modules/ShipModule.cpp" />
 		<Unit filename="src/Universe/Universe.cpp" />
 		<Unit filename="src/Universe/Utility/DebugDraw.cpp" />
+		<Unit filename="src/Universe/Utility/Factory.cpp" />
 		<Unit filename="src/Universe/Utility/GameObject.cpp" />
-		<Unit filename="src/Universe/Utility/GameObjectFactory.cpp" />
 		<Unit filename="src/Universe/Utility/UniversalContactListener.cpp" />
 		<Extensions>
 			<code_completion />
