--- a/blueprints/roster.cfg
+++ b/blueprints/roster.cfg
@@ -3,6 +3,13 @@
     "blueprintList": [
         "DefaultModule.bp",
         "DefaultShipModule.bp",
-        "thruster/DefaultThruster.bp"
+        "thruster/DefaultThruster.bp",
+        "capacitor/DefaultCapacitor.bp",
+        "reactor/DefaultReactor.bp",
+		
+		
+		
+		"chunk/DefaultChunk.bp"
+		
     ]
 }
