Json Messages and Sensors (no filters yet)

--- a/Beta.cbp
+++ b/Beta.cbp
@@ -93,11 +93,12 @@
 			<Add directory="include/Universe" />
 			<Add directory="include/Universe/Chunk" />
 			<Add directory="include/Universe/Module" />
-			<Add directory="include/Universe/ModuleComponent" />
+			<Add directory="include/Universe/ShipModule" />
 			<Add directory="include/Universe/Utility" />
 			<Add directory="include/Universe/Weapon" />
 			<Add directory="include/Graphics/Utility" />
 		</Compiler>
+		<Unit filename="include/Basic/Health.hpp" />
 		<Unit filename="include/Basic/Link.hpp" />
 		<Unit filename="include/Basic/Pool.hpp" />
 		<Unit filename="include/Basic/Timer.hpp" />
@@ -140,19 +141,20 @@
 		<Unit filename="include/Physics/BodyComponent.hpp" />
 		<Unit filename="include/Physics/FixtureComponent.hpp" />
 		<Unit filename="include/Universe/Chunk/Chunk.hpp" />
-		<Unit filename="include/Universe/Module/Capacitor.hpp" />
-		<Unit filename="include/Universe/Module/Health.hpp" />
+		<Unit filename="include/Universe/Chunk/TestThing.hpp" />
 		<Unit filename="include/Universe/Module/Module.hpp" />
-		<Unit filename="include/Universe/Module/Reactor.hpp" />
 		<Unit filename="include/Universe/Module/Sensor.hpp" />
 		<Unit filename="include/Universe/Module/ShipModule.hpp" />
-		<Unit filename="include/Universe/Module/Thruster.hpp" />
+		<Unit filename="include/Universe/ShipModule/Capacitor.hpp" />
+		<Unit filename="include/Universe/ShipModule/Reactor.hpp" />
+		<Unit filename="include/Universe/ShipModule/Thruster.hpp" />
 		<Unit filename="include/Universe/Universe.hpp" />
 		<Unit filename="include/Universe/Utility/BlueprintLoader.hpp" />
 		<Unit filename="include/Universe/Utility/DebugDraw.hpp" />
 		<Unit filename="include/Universe/Utility/GameObject.hpp" />
 		<Unit filename="include/Universe/Utility/UniversalContactListener.hpp" />
 		<Unit filename="main.cpp" />
+		<Unit filename="src/Basic/Health.cpp" />
 		<Unit filename="src/Basic/Link.cpp" />
 		<Unit filename="src/Basic/Pool.cpp" />
 		<Unit filename="src/Basic/Timer.cpp" />
@@ -189,13 +191,12 @@
 		<Unit filename="src/Physics/BodyComponent.cpp" />
 		<Unit filename="src/Physics/FixtureComponent.cpp" />
 		<Unit filename="src/Universe/Chunk/Chunk.cpp" />
-		<Unit filename="src/Universe/Module/Capacitor.cpp" />
-		<Unit filename="src/Universe/Module/Health.cpp" />
 		<Unit filename="src/Universe/Module/Module.cpp" />
-		<Unit filename="src/Universe/Module/Reactor.cpp" />
 		<Unit filename="src/Universe/Module/Sensor.cpp" />
 		<Unit filename="src/Universe/Module/ShipModule.cpp" />
-		<Unit filename="src/Universe/Module/Thruster.cpp" />
+		<Unit filename="src/Universe/ShipModule/Capacitor.cpp" />
+		<Unit filename="src/Universe/ShipModule/Reactor.cpp" />
+		<Unit filename="src/Universe/ShipModule/Thruster.cpp" />
 		<Unit filename="src/Universe/Universe.cpp" />
 		<Unit filename="src/Universe/Utility/BlueprintLoader.cpp" />
 		<Unit filename="src/Universe/Utility/DebugDraw.cpp" />
