--- a/Beta.cbp
+++ b/Beta.cbp
@@ -111,7 +111,10 @@
 		<Unit filename="include/Control/SlaveLocator.hpp" />
 		<Unit filename="include/Game/Game.hpp" />
 		<Unit filename="include/Graphics/Animator.hpp" />
+		<Unit filename="include/Graphics/DecorQuad.hpp" />
+		<Unit filename="include/Graphics/Decoration.hpp" />
 		<Unit filename="include/Graphics/GraphicsComponent.hpp" />
+		<Unit filename="include/Graphics/LinearMeter.hpp" />
 		<Unit filename="include/Graphics/QuadComponent.hpp" />
 		<Unit filename="include/Graphics/Spinner.hpp" />
 		<Unit filename="include/Graphics/Utility/AnimAlloc.hpp" />
@@ -157,7 +160,6 @@
 		<Unit filename="include/Universe/Utility/GameObject.hpp" />
 		<Unit filename="include/Universe/Utility/UniversalContactListener.hpp" />
 		<Unit filename="main.cpp" />
-		<Unit filename="srcUniverse/ShipModule/Plating.cpp" />
 		<Unit filename="src/Basic/Health.cpp" />
 		<Unit filename="src/Basic/Link.cpp" />
 		<Unit filename="src/Basic/Pool.cpp" />
@@ -169,8 +171,11 @@
 		<Unit filename="src/Control/SlaveLocator.cpp" />
 		<Unit filename="src/Game/Game.cpp" />
 		<Unit filename="src/Graphics/Animator.cpp" />
+		<Unit filename="src/Graphics/DecorQuad.cpp" />
+		<Unit filename="src/Graphics/Decoration.cpp" />
 		<Unit filename="src/Graphics/GraphicsComponent.cpp" />
 		<Unit filename="src/Graphics/GraphicsLayer.cpp" />
+		<Unit filename="src/Graphics/LinearMeter.cpp" />
 		<Unit filename="src/Graphics/QuadComponent.cpp" />
 		<Unit filename="src/Graphics/Spinner.cpp" />
 		<Unit filename="src/Graphics/Utility/AnimAlloc.cpp" />
@@ -199,6 +204,7 @@
 		<Unit filename="src/Universe/Module/Sensor.cpp" />
 		<Unit filename="src/Universe/Module/ShipModule.cpp" />
 		<Unit filename="src/Universe/ShipModule/Capacitor.cpp" />
+		<Unit filename="src/Universe/ShipModule/Plating.cpp" />
 		<Unit filename="src/Universe/ShipModule/Radar.cpp" />
 		<Unit filename="src/Universe/ShipModule/Reactor.cpp" />
 		<Unit filename="src/Universe/ShipModule/Thruster.cpp" />
