--- a/window.ini
+++ b/window.ini
@@ -5,12 +5,12 @@
     "windowed": true,
 
     "resX": 1200,
-    "resY": 550,
+    "resY": 700,
     "color": 32,
     "antiAliasingLevel": 4,
     "smoothTextures": true,
     "motionBlurFile": "shaders/motionBlur.frag",
     "motionBlurEnabled": true,
-    "vSinc": false,
+    "vSinc": true,
     "targetFPS": 60
 }
